// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component matches snapshot for default select 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      aria-controls="radix-_r_n_"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="outline-none f-13-400 border-input flex w-full cursor-pointer items-center rounded-md border bg-BG_WHITE text-GRAY_1000 px-3 outline-hidden placeholder:text-GRAY_700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 disabled:cursor-not-allowed disabled:opacity-50 h-10"
      data-slot="popover-trigger"
      data-state="closed"
      data-testid="select-trigger"
      type="button"
    >
      <span
        class="flex-1 truncate text-GRAY_700"
      >
        Snap
      </span>
      <svg
        class="lucide lucide-chevron-down text-GRAY_700 h-4 w-4 opacity-50 transition-transform duration-200"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select component matches snapshot for select with custom className 1`] = `
<div>
  <div
    class="relative w-full custom-class"
  >
    <div
      aria-controls="radix-_r_p_"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="outline-none f-13-400 border-input flex w-full cursor-pointer items-center rounded-md border bg-BG_WHITE text-GRAY_1000 px-3 outline-hidden placeholder:text-GRAY_700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 disabled:cursor-not-allowed disabled:opacity-50 h-10"
      data-slot="popover-trigger"
      data-state="closed"
      data-testid="select-trigger"
      type="button"
    >
      <span
        class="flex-1 truncate text-GRAY_700"
      >
        Custom Class
      </span>
      <svg
        class="lucide lucide-chevron-down text-GRAY_700 h-4 w-4 opacity-50 transition-transform duration-200"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select component matches snapshot for select with label 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <label
      class="mb-1 block text-sm font-medium"
    >
      Test Label
    </label>
    <div
      aria-controls="radix-_r_o_"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="outline-none f-13-400 border-input flex w-full cursor-pointer items-center rounded-md border bg-BG_WHITE text-GRAY_1000 px-3 outline-hidden placeholder:text-GRAY_700 focus:border-gray-600 focus:ring-2 focus:ring-gray-400 disabled:cursor-not-allowed disabled:opacity-50 h-10"
      data-slot="popover-trigger"
      data-state="closed"
      data-testid="select-trigger"
      type="button"
    >
      <span
        class="flex-1 truncate text-GRAY_700"
      >
        Snap
      </span>
      <svg
        class="lucide lucide-chevron-down text-GRAY_700 h-4 w-4 opacity-50 transition-transform duration-200"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;
